src/objects/MUSW__Automation_Restriction__c.object
<CustomObject>
    <description>Automation Results that met filter criteria, but restrict result from applying</description>
    <fields>
        <fullName>MUSW__Automation_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Automation Result</label>
        <referenceTo>MUSW__Automation_Result__c</referenceTo>
        <relationshipName>Restrictions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Table__c</fullName>
        <label>Table</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MUSW_Work_Item__c</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Record Exist</fullName>
                    <default>true</default>
                    <label>Record Exist</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>70</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Automation Restriction</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Restriction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>